Implementation of Customer JPA Operation and Tests